# poetryTestProject

./: README.md  app.py  pyproject.toml  testes.ipynb
