[project]
name = "projeto-ml01"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Amorim",email = "diegogpamorim1305@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
